--- a/themes/commerce_kickstart_theme/css/global.css
+++ b/themes/commerce_kickstart_theme/css/global.css
@@ -85,7 +85,6 @@ ul.primary li a {
  */
 #region-user-second {
   background-color: #FFFFFF;
-  margin: 0;
 }
 #region-branding {
   width: 99%;
@@ -105,6 +104,9 @@ ul.primary li a {
 .region-user-second .region-user-second-inner {
   height: 100%;
 }
+
+
+
 #block-views-shopping-cart-block {
   margin: 0 auto;
   width: 260px;
@@ -120,7 +122,6 @@ ul.primary li a {
  */
 #block-views-exp-display-products-page {
   float: right;
-  margin-right: 10px;
   padding-top: 36px;
 }
 #block-views-exp-display-products-page .views-exposed-widget {
@@ -658,15 +659,19 @@ ul.primary li a {
   margin: auto;
 }
 .block-blog-block .block-title {
-  background: url('../images/bg_block_homepage_title.png') left top no-repeat;
+  background-image: url('../images/bg_block_homepage_title.png');
+  background-position: 0 0;
+  background-repeat: no-repeat;
   color: #ffffff;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   font-size: 16px;
   height: 50px;
+  margin: 0 auto;
   padding-top: 11px;
-  padding-left: 25px;
-  width: 112px;
+  padding-left: 0;
+  text-align: center;
+  width: 130px;
 }
 .view-display-id-block_1 .views-row .views-field-field-tagline,
 .view-display-id-block_2 .views-row .views-field-field-tagline {
